Bug 66542 - Fix "LEGACY" conditional directive
Summary: Fix "LEGACY" conditional directive
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-03 07:46 UTC by David Coppa
Modified: 2013-07-03 13:14 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
[PATCH] Fix "LEGACY" conditional directive (2.18 KB, text/plain)
2013-07-03 07:46 UTC, David Coppa
Details

Description David Coppa 2013-07-03 07:46:13 UTC
Created attachment 81941 [details]
[PATCH] Fix "LEGACY" conditional directive

The attached diff fixes the "LEGACY" conditional (#ifndef -> #ifdef).

This also fixes the warning at shutdown:

systemd-cgroups-agent [594]: Failed to get D-Bus connection: Failed to connect to socket /org/freedesktop/systemd1/private: Connection refused
Comment 1 Zbigniew Jedrzejewski-Szmek 2013-07-03 13:14:24 UTC
Applied in http://cgit.freedesktop.org/systemd/systemd/commit/?id=286ca48,
but changed #ifdef LEGACY to #ifndef NOLEGACY, because we wan't "legacy"
by default. So the heritage is opt-out, not opt-in, so to speak.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.