build-sys: rename LEGACY to NOLEGACY to better reflect meaning

https://bugs.freedesktop.org/show_bug.cgi?id=66542